<resources>
    <string name="app_name">mvvm_xlab</string>
    <string name="app_api_key">AIzaSyAPzZWCFiKVJ2yURnTLBz4o83NhBjzp4vU</string>
    <string name="facebook_app_id">1866904940202203</string>
    <string name="fb_login_protocol_scheme">fb1866904940202203</string>
    <string name="facebooklink_host">facebooklink</string>
    <string name="kakao_app_key">8d0e39e1ae18515c069718283b53cb7e</string>
    <string name="kakao_scheme">kakao8d0e39e1ae18515c069718283b53cb7e</string>
    <string name="kakaolink_host">kakaolink</string>
    <string name="cs_mail">cs@xlab.io</string>
    <string name="mail_subject">문의 및 의견 메일입니다.</string>
    <string name="mail_content1">-------------------------------------------------"\n"</string>
    <string name="mail_content2">회원 이메일 주소 : </string>
    <string name="mail_content3">OS 버전 : </string>
    <string name="mail_content4">앱 버전 : </string>
    <string name="mail_content5">기기 정보 : </string>
    <string name="picture">사진</string>
    <string name="youtube_link">유튜브 링크</string>
    <string name="youtube_video_id">유튜브 영상 아이디</string>
    <string name="copy_link">링크복사</string>
    <string name="copy_link_success">링크가 복사되었습니다</string>
    <string name="login">로그인</string>
    <string name="email">이메일</string>
    <string name="nick_name">닉네임</string>
    <string name="password">비밀번호</string>
    <string name="password_reset">비밀번호 재설정</string>
    <string name="register">회원가입</string>
    <string name="look_around">둘러보기</string>
    <string name="register_nick_name">닉네임 설정</string>
    <string name="reset_password_email">이메일 인증</string>
    <string name="request_confirm">인증요청</string>
    <string name="re_request_confirm">재요청</string>
    <string name="confirm_code_hint">인증번호 6자리</string>
    <string name="end_issue_timer">인증 요청시간을 초과하었습니다</string>
    <string name="login_facebook">페이스북으로</string>
    <string name="login_kakao">카카오톡으로</string>
    <string name="used_mail">이미 사용중인 이메일입니다.</string>
    <string name="used_nick">이미 사용중인 닉네임입니다.</string>
    <string name="confirm_password_text">영문+숫자</string>
    <string name="confirm_password_length">・6"-"20글자</string>
    <string name="confirm_nick_length">3"-"10글자</string>
    <string name="finish">완료</string>
    <string name="okay">확인</string>
    <string name="agreement">가입 시 이용약관 및 개인정보 취급방침에 동의합니다.</string>
    <string name="login_fail_no_mail">등록되지 않은 이메일입니다.</string>
    <string name="login_fail_password">비밀번호가 일치하지 않습니다.</string>
    <string name="login_fail_wrong_mail">이메일 형식을 확인해 주세요.</string>
    <string name="skip_onBoarding">건너뛰기</string>
    <string name="end_onBoarding">시작하기</string>
    <string name="onBoarding1">반려동물을 추가하면"\n"슬랩이 더 똑똑해져요</string>
    <string name="onBoarding2">하단의 버튼을 누르면"\n"나와 비슷한 사람들이 사용한 제품의"\n"인기율이 나타나요</string>
    <string name="onBoarding3">사용한 제품을 평가하면"\n"관심있을 제품을 소개해드려요</string>
    <string name="main_fragment_all">전체</string>
    <string name="main_fragment_explore">탐색</string>
    <string name="following">팔로잉</string>
    <string name="main_fragment_item">제품</string>
    <string name="no_following_user">아직 팔로우한 회원이 없어요</string>
    <string name="do_follow">팔로우 하기</string>
    <string name="question_match_toast">반려동물을 추가하면"\n"제품을 소개해드립니다</string>
    <string name="is_login_service">로그인하시겠어요?</string>
    <string name="is_login_service2">슬랩의 모든 서비스를 이용할 수 있습니다</string>
    <string name="is_add_topic">반려동물을 추가하시겠어요?</string>
    <string name="is_add_topic2">관심있을 제품을 소개해드립니다</string>
    <string name="can_use_after_login">로그인 후 이용할 수 있습니다</string>
    <string name="no_following_post">업로드된 포스트가 아직 없어요</string>
    <string name="go_login">로그인 하기</string>
    <string name="camera_fragment_library">라이브러리</string>
    <string name="camera_fragment_cam">카메라</string>
    <string name="next">다음</string>
    <string name="image_all">모든 사진</string>
    <string name="follower">팔로워</string>
    <string name="profile_tab_album">Album</string>
    <string name="profile_tab_pet">Pet</string>
    <string name="topic_add">토픽추가</string>
    <string name="no_upload_post">업로드한 포스트가 없어요</string>
    <string name="no_upload_post_my">일상을 공유해보세요</string>
    <string name="no_used_item">평가한 제품이 없어요</string>
    <string name="no_used_item_my">사용해본 제품을 평가해보세요</string>
    <string name="upload_post">포스트 업로드</string>
    <string name="share">공유</string>
    <string name="report">신고</string>
    <string name="save_post">저장한 포스트</string>
    <string name="pet_item">제품</string>
    <string name="more_item">더보기</string>
    <string name="is_report_user">신고하시겠어요?</string>
    <string name="is_report_user2">검토 후 해당 계정이용이 정지됩니다.</string>
    <string name="success_report">신고가 완료되었습니다</string>
    <string name="profile_edit_title">프로필 편집</string>
    <string name="save">저장</string>
    <string name="cancel">취소</string>
    <string name="introduction">소개</string>
    <string name="introduction_hint">100자 이내</string>
    <string name="profile_detail">세부정보</string>
    <string name="profile_detail_text">입력할수록 더욱 정확한 정보와 제품을"\n"소개받을 수 있어요</string>
    <string name="gender">성별</string>
    <string name="male">남성</string>
    <string name="female">여성</string>
    <string name="etc">기타</string>
    <string name="male_en">male</string>
    <string name="female_en">female</string>
    <string name="etc_en">etc</string>
    <string name="none_type">미입력</string>
    <string name="locale">지역</string>
    <string name="birth">출생연도</string>
    <string name="birth_hint">YYYY</string>
    <string name="birth_confirm">출생연도를 다시 확인해주세요.</string>
    <string name="is_cancel">취소하시겠어요?</string>
    <string name="is_cancel2">입력한 내용이 저장되지 않습니다.</string>
    <string name="setting_title">설정</string>
    <string name="topic_setting">토픽 설정</string>
    <string name="liked_post">좋아한 포스트</string>
    <string name="notice">공지사항</string>
    <string name="version">버전</string>
    <string name="update">업데이트</string>
    <string name="policy">약관 및 정책</string>
    <string name="suggestion">의견 보내기</string>
    <string name="logout">로그아웃</string>
    <string name="logout_message">로그아웃 하시겠어요?</string>
    <string name="withdraw">회원탈퇴</string>
    <string name="topic">토픽</string>
    <string name="old_password">기존"\n"비밀번호 입력</string>
    <string name="new_password">새로운"\n"비밀번호 설정</string>
    <string name="wrong_password">비밀번호가 일치하지 않습니다</string>
    <string name="success_change_password">비밀번호 재설정이 완료되었습니다</string>
    <string name="account">계정</string>
    <string name="shopping">쇼핑</string>
    <string name="support">지원</string>
    <string name="change_shop_account">쇼핑 정보 수정</string>
    <string name="push_receive">푸시 알림 수신</string>
    <string name="withdraw_title">탈퇴하려는 이유는"\n"무엇인가요?</string>
    <string name="withdraw_reason1">자주 사용하지 않아서</string>
    <string name="withdraw_reason2">회원 혜택이 부족해서</string>
    <string name="withdraw_reason3">불만, 불편 사항 응대에 늦어서</string>
    <string name="withdraw_reason4">시스템 오류가 잦아서</string>
    <string name="withdraw_more_info">회원탈퇴 시 지금까지 기록한 모든 내용이 삭제되며,"\n"3개월 동안 해당 이메일로 재가입할 수 없습니다.</string>
    <string name="withdraw_agree">위 내용에 동의합니다</string>
    <string name="withdraw_reason_hint">사유 입력</string>
    <string name="withdraw_button">탈퇴하기</string>
    <string name="withdraw_success">회원탈퇴가 완료되었습니다</string>
    <string name="recommend_user">추천회원</string>
    <string name="add">추가</string>
    <string name="no_topic">반려동물을 추가하고 제품을 소개받아보세요</string>
    <string name="add_topic">반려동물 추가하기</string>
    <string name="topic_pet_add">Pet 추가</string>
    <string name="topic_pet_edit">Pet 편집</string>
    <string name="topic_color">토픽 색상</string>
    <string name="pet_type">종류</string>
    <string name="dog">강아지</string>
    <string name="cat">고양이</string>
    <string name="dog_en">dog</string>
    <string name="cat_en">cat</string>
    <string name="pet_name">이름</string>
    <string name="pet_name_hint">이름입력</string>
    <string name="pet_female">암컷</string>
    <string name="pet_male">수컷</string>
    <string name="pet_neutered">중성화 여부</string>
    <string name="pet_neutered_ok">•" "중성화</string>
    <string name="pet_breed">품종</string>
    <string name="pet_breed_select">품종 선택</string>
    <string name="pet_age">나이</string>
    <string name="pet_birth">생년"\n"월일</string>
    <string name="pet_birth_hint">YYYY-MM-DD</string>
    <string name="confirm_pet_birth">날짜를 다시 확인해주세요</string>
    <string name="pet_weight">몸무게</string>
    <string name="weight">무게</string>
    <string name="weight_hint">0.0 kg</string>
    <string name="weight_unit">kg</string>
    <string name="pet_hair_type">털 타입</string>
    <string name="pet_short_hair">단모</string>
    <string name="pet_long_hair">중/장모</string>
    <string name="pet_curly_hair">곱슬</string>
    <string name="pet_hair_color">털 색상 • 복수 선택 가능</string>
    <string name="search">검색</string>
    <string name="breed_mix_kor">믹스견</string>
    <string name="breed_mix_en">MIX</string>
    <string name="delete_topic">토픽 삭제</string>
    <string name="is_delete_topic">토픽을 삭제하시겠어요?</string>
    <string name="filter_original">Original</string>
    <string name="filter_haze">Haze</string>
    <string name="filter_gamma">Gamma</string>
    <string name="filter_contrast">Contrast</string>
    <string name="filter_exposure">Exposure</string>
    <string name="filter_levels">Levels" "Min</string>
    <string name="filter_sepia">Sepia</string>
    <string name="filter_gray">Gray" "scale</string>
    <string name="filter_vignette">Vignette</string>
    <string name="auto_fix">Autofix</string>
    <string name="bw">Min/Max Color Intensity</string>
    <string name="brightness">Brightness</string>
    <string name="contrast">Contrast</string>
    <string name="cross_process">Cross Process</string>
    <string name="documentary">Documentary</string>
    <string name="duo_tone">Duo Tone</string>
    <string name="fill_light">Fill Light</string>
    <string name="fish_eye">Fish Eye</string>
    <string name="flip_vert">Flip Vertical</string>
    <string name="flip_hor">Flip Horizontal</string>
    <string name="grain">Grain</string>
    <string name="gray_scale">Grayscale</string>
    <string name="lomoish">Lomoish</string>
    <string name="negative">Negative</string>
    <string name="posterize">Posterize</string>
    <string name="rotate">Rotate</string>
    <string name="saturate">Saturate</string>
    <string name="sepia">Sepia</string>
    <string name="sharpen">Sharpen</string>
    <string name="temperature">Temperature</string>
    <string name="tint">Tint</string>
    <string name="vignette">Vignette</string>
    <string name="tag_item">제품 태그</string>
    <string name="used_item">사용한 제품</string>
    <string name="content_hint">내용 입력</string>
    <string name="save_post_message">저장되었습니다</string>
    <string name="save_cancel_post_message">저장이 취소되었습니다</string>
    <string name="is_delete_post">해당 게시물을 삭제하시겠어요?</string>
    <string name="is_delete_post2">다시 복구할 수 없습니다.</string>
    <string name="no_save_post">저장한 포스트가 없어요</string>
    <string name="comment">댓글</string>
    <string name="input_comment">댓글 입력</string>
    <string name="edit">수정</string>
    <string name="delete">삭제</string>
    <string name="delivery">배송 안내</string>
    <string name="delivery_way">배송방법</string>
    <string name="delivery_way_info">택배/소포/등기</string>
    <string name="delivery_region">배송지역</string>
    <string name="delivery_region_info">국내배송</string>
    <string name="delivery_company">택배사</string>
    <string name="delivery_day">배송완료일수</string>
    <string name="delivery_day_info">3일 정도 소요</string>
    <string name="delivery_cost">추가배송비</string>
    <string name="delivery_cost_info">도서산간 지역"\n"(업체 직배송 제품이나 상품 종류에 따라 배송비가 추가될 수 있음)</string>
    <string name="return_address_title">반품주소</string>
    <string name="return_name">반품지명</string>
    <string name="return_address">반품주소</string>
    <string name="return_phone">반품연락처</string>
    <string name="return_delivery_company">반품택배사</string>
    <string name="exchange_info">교환/반품/환불 안내</string>
</resources>