<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:overScrollMode="never"
    tools:context=".view.goodsInfo.GoodsDeliveryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="64dp">

        <include
            android:id="@+id/actionBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/action_bar_default"
            app:layout_constraintTop_toTopOf="parent"/>

        <xlab.world.xlab.utils.view.textView.TextViewBoldHan
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delivery"
            android:textSize="15sp"
            android:textColor="@color/color000000"
            android:layout_marginTop="16dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <xlab.world.xlab.utils.view.textView.TextViewRegularNoto
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/delivery_way"
                    android:textSize="12sp"
                    android:textColor="@color/color6D6D6D"/>
                <xlab.world.xlab.utils.view.textView.TextViewRegularNoto
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/delivery_way_info"
                    android:textSize="12sp"
                    android:textColor="@color/color000000"
                    android:layout_marginStart="8dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp">
                <xlab.world.xlab.utils.view.textView.TextViewRegularNoto
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/delivery_region"
                    android:textSize="12sp"
                    android:textColor="@color/color6D6D6D"/>
                <xlab.world.xlab.utils.view.textView.TextViewRegularNoto
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/delivery_region_info"
                    android:textSize="12sp"
                    android:textColor="@color/color000000"
                    android:layout_marginStart="8dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp">
                <xlab.world.xlab.utils.view.textView.TextViewRegularNoto
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/delivery_company"
                    android:textSize="12sp"
                    android:textColor="@color/color6D6D6D"/>
                <xlab.world.xlab.utils.view.textView.TextViewRegularNoto
                    android:id="@+id/textViewDeliveryCompany"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textSize="12sp"
                    android:textColor="@color/color000000"
                    android:layout_marginStart="8dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp">
                <xlab.world.xlab.utils.view.textView.TextViewRegularNoto
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/delivery_day"
                    android:textSize="12sp"
                    android:textColor="@color/color6D6D6D"/>
                <xlab.world.xlab.utils.view.textView.TextViewRegularNoto
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/delivery_day_info"
                    android:textSize="12sp"
                    android:textColor="@color/color000000"
                    android:layout_marginStart="8dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp">
                <xlab.world.xlab.utils.view.textView.TextViewRegularNoto
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/delivery_cost"
                    android:textSize="12sp"
                    android:textColor="@color/color6D6D6D"/>
                <xlab.world.xlab.utils.view.textView.TextViewRegularNoto
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/delivery_cost_info"
                    android:textSize="12sp"
                    android:textColor="@color/color000000"
                    android:layout_marginStart="8dp"/>
            </TableRow>

        </TableLayout>

        <xlab.world.xlab.utils.view.textView.TextViewBoldHan
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/return_address_title"
            android:textSize="15sp"
            android:textColor="@color/color000000"
            android:layout_marginTop="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <xlab.world.xlab.utils.view.textView.TextViewRegularNoto
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/return_name"
                    android:textSize="12sp"
                    android:textColor="@color/color6D6D6D"/>
                <xlab.world.xlab.utils.view.textView.TextViewRegularNoto
                    android:id="@+id/textViewReturnName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textSize="12sp"
                    android:textColor="@color/color000000"
                    android:layout_marginStart="8dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp">
                <xlab.world.xlab.utils.view.textView.TextViewRegularNoto
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/return_address"
                    android:textSize="12sp"
                    android:textColor="@color/color6D6D6D"/>
                <xlab.world.xlab.utils.view.textView.TextViewRegularNoto
                    android:id="@+id/textViewReturnAddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textSize="12sp"
                    android:textColor="@color/color000000"
                    android:layout_marginStart="8dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp">
                <xlab.world.xlab.utils.view.textView.TextViewRegularNoto
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/return_phone"
                    android:textSize="12sp"
                    android:textColor="@color/color6D6D6D"/>
                <xlab.world.xlab.utils.view.textView.TextViewRegularNoto
                    android:id="@+id/textViewReturnPhone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textSize="12sp"
                    android:textColor="@color/color000000"
                    android:layout_marginStart="8dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp">
                <xlab.world.xlab.utils.view.textView.TextViewRegularNoto
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/return_delivery_company"
                    android:textSize="12sp"
                    android:textColor="@color/color6D6D6D"/>
                <xlab.world.xlab.utils.view.textView.TextViewRegularNoto
                    android:id="@+id/textViewReturnDeliveryCompany"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textSize="12sp"
                    android:textColor="@color/color000000"
                    android:layout_marginStart="8dp"/>
            </TableRow>

        </TableLayout>

        <xlab.world.xlab.utils.view.textView.TextViewBoldHan
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exchange_info"
            android:textSize="15sp"
            android:textColor="@color/color000000"
            android:layout_marginTop="56dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>

        <xlab.world.xlab.utils.view.textView.TextViewRegularNoto
            android:id="@+id/textViewInfo1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="12sp"
            android:textColor="@color/color000000"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>

        <xlab.world.xlab.utils.view.textView.TextViewRegularNoto
            android:id="@+id/textViewInfo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="20dp"
            android:text="@string/return_info2"
            android:textSize="12sp"
            android:textColor="@color/color6D6D6D"/>
    </LinearLayout>

</ScrollView>